--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,7 @@
 // Component Styles
 @import 'components/nav',
         'components/buttons',
+        'components/form',
         'components/icons',
         'components/images';
 
