--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -54,6 +54,8 @@
   border: 1px solid $color-accent;
   border-radius: 5px;
   box-shadow: $color-accent-transp;
+  font-size: 1.1rem;
+  font-weight: 600;
 }
 
 // Media Queries
