--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -16,4 +16,9 @@
         right: -35px;
         font-size: 2.4rem;
     }
+    @include mq(mob) {
+        top: 10px;
+        right: 20px;
+        color: $color-primary;
+    }
 }
