--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -12,16 +12,23 @@ img {
 .profile-img {
     @include center(250px);
     margin-top: -130px;
+    @include mq(mob) {
+        margin-top: -140px;
+        @include center(200px);
+    }
 }
 .profile-img img {
     @include roundy($dim: 250px, $brdr: 3px solid $color-primary-light);
     box-shadow: 2px 2px 5px $color-primary;
+    @include mq(mob) {
+        @include roundy($dim: 200px);
+    }
 }
 
 // Card
 .card-img {
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 0 0 5px 5px;
     grid-column: 1 / -1;
     grid-row: 1 / -1;
