--- a/scss/layout/_modals.scss
+++ b/scss/layout/_modals.scss
@@ -59,11 +59,11 @@
 #mars-rover .mod-hero {
     background-image: url(../images/mars-1.png);
 }
-#pricing-slide .mod-hero {
-    background-image: url(../images/page-slider-1.png);
+#countries .mod-hero {
+    background-image: url(../images/countries-2.png);
 }
-#four-card .mod-hero {
-    background-image: url(../images/four-card-1.png);
+#loop .mod-hero {
+    background-image: url(../images/loop-1.png);
 }
 
 // Features / Tech used sections
