--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -145,6 +145,7 @@ textarea {
     right: 0;
     bottom: 0;
     background: rgba($color-primary-light, $alpha: .8);
+    padding: 1rem;
     color: white;
     display: grid;
     grid-template-columns: 1;
