--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,6 +3,7 @@
 // ======================================
 
 .page-header {
+    padding-top: 20px;
     height: 600px;
     background: linear-gradient(180deg, $color-primary 35%,$color-primary-light 60%,lighten($color-primary-light, 10%),lighten($color-primary-light, 20%), $color-bg-darker, $color-bg);
     @include flexy($dir: column);
